[package]
name = "senile"
version = "0.0.0"
authors = ["Heiko Alexander Weber <haw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "senile"
readme = "docs/README.md"
homepage = "https://replicadse.github.io/senile"
repository = "https://github.com/replicadse/senile"
keywords = ["todo"]
categories = ["command-line-utilities"]

[features]
  default = []

[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dependencies]
clap = "^2.33.0"
walkdir = "^2.3.1"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.45"
fancy-regex = "^0.5.0"
crossbeam = "^0.8.0"
threadpool = "^1.8.1"
aquamarine = "^0.1.8"

